--- a/_posts/2023-08-30-test.md
+++ b/_posts/2023-08-30-test.md
@@ -7,3 +7,15 @@ thumbnail: /img/projects/test/991915342559461407.png
 banner-alt: test
 ---
 test
+
+
+
+I need to see how to make the pictures go nice
+
+
+
+![](/img/projects/test/tweet-_-twitter.jpg)
+
+![](/img/projects/test/20230119_174420.jpg)
+
+![](/img/projects/test/unknown.png)
