--- a/_posts/2023-08-30-test.md
+++ b/_posts/2023-08-30-test.md
@@ -8,12 +8,9 @@ banner-alt: test
 ---
 test
 
-
-
 I need to see how to make the pictures go nice
-
-
 
 ![](/img/projects/test/tweet-_-twitter.jpg)
 ![](/img/projects/test/20230119_174420.jpg)
 ![](/img/projects/test/unknown.png)
+{: .image-grid}
